更新 Paint.csproj 資源與套件引用
在 `Paint.csproj` 中進行了以下變更：
- 在 `<PropertyGroup>` 之後新增了一個 `<ItemGroup>`，移除了 `ellipse.png`、`line.png`、`polyline.png` 和 `rectangle.png` 這些資源。
- 在現有的 `<ItemGroup>` 中，新增了一個 `Extended.Wpf.Toolkit` 套件引用，版本為 `4.6.1`。
- 新增了一個新的 `<ItemGroup>`，將 `ellipse.png`、`line.png`、`polyline.png` 和 `rectangle.png` 這些資源重新加入為資源項目。

--- a/Paint/Paint.csproj
+++ b/Paint/Paint.csproj
@@ -9,7 +9,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="ellipse.png" />
+    <None Remove="line.png" />
+    <None Remove="polyline.png" />
+    <None Remove="rectangle.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Extended.Wpf.Toolkit" Version="4.6.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="ellipse.png" />
+    <Resource Include="line.png" />
+    <Resource Include="polyline.png" />
+    <Resource Include="rectangle.png" />
   </ItemGroup>
 
 </Project>
