--- a/Paint/Paint.csproj
+++ b/Paint/Paint.csproj
@@ -10,9 +10,11 @@
 
   <ItemGroup>
     <None Remove="ellipse.png" />
+    <None Remove="eraser.png" />
     <None Remove="line.png" />
     <None Remove="polyline.png" />
     <None Remove="rectangle.png" />
+    <None Remove="trashcan.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,9 +23,11 @@
 
   <ItemGroup>
     <Resource Include="ellipse.png" />
+    <Resource Include="eraser.png" />
     <Resource Include="line.png" />
     <Resource Include="polyline.png" />
     <Resource Include="rectangle.png" />
+    <Resource Include="trashcan.png" />
   </ItemGroup>
 
 </Project>
